--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 #website-title {
-    font-size: 200px;
-    color: green;
-    text-align: center;
-    font-weight: 800;
-}
-
-.red-text {
+    font-size: 150px;
     color: red;
+    text-align: center;
+    font-weight: 500;
 }
 
-.font-bold {
-    font-weight: 800;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#image-size {
+    width: 500px;
+}
+
+.font-size {
+    font-size: 50px;
 }
 
 #box {
@@ -18,14 +24,14 @@
     padding: 50px 25px;
     margin: 50px 0px;
     display: inline-block;
-    width: 500px;
+    width: auto;
+    height: auto;
 }
 
 span {
-    font-size: 64px;    
+    font-size: 80px;    
 }
 
-.container {
-    border: 2px blue solid;
-    padding: 25px 100px;    
+body {
+    background-image: url("bg.webp");
 }
